--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.0.1",
     "nodemon": "^2.0.20",
+    "pg": "^8.11.1",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.28.0"
   }
 }
